@@ -1,3 +1,12 @@
+2011-01-16  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* pychecker/pcmodules.py:
+	  Add an assertion to make sure that the alias being imported
+	  was not already imported before.
+	* test/test_internal.py:
+	  Add a test for star imports.
+	  Also triggers the assert above.
+
 2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* pychecker/pcmodules.py:
